# chemnlp

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  \  conda.yaml  dev-requirements.txt  example_text_sampling.ipynb  meta.yaml  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: install.yaml
configs/: tune.yaml
data/: README.md  check_pandas.py  check_smiles_split.py  postprocess_split.py  train_test_split.py
data/Acute_Toxicity_LD50/: example_processing_and_templates.ipynb  meta.yaml  transform.py
data/Ames_Mutagenicity/: example_processing_and_templates.ipynb  meta.yaml  transform.py
data/Bioavailability_Ma_et_al/: meta.yaml  transform.py
data/Blood_Brain_Barrier_Martins_et_al/: meta.yaml  transform.py
data/CYP2C9_Substrate_CarbonMangels/: meta.yaml  transform.py
data/CYP2D6_Substrate_CarbonMangels/: meta.yaml  transform.py
data/CYP3A4_Substrate_CarbonMangels/: meta.yaml  transform.py
data/CYP_P450_1A2_Inhibition_Veith_et_al/: meta.yaml  transform.py
data/CYP_P450_2C19_Inhibition_Veith_et_al/: meta.yaml  transform.py
data/CYP_P450_2C9_Inhibition_Veith_et_al/: meta.yaml  transform.py
data/CYP_P450_2D6_Inhibition_Veith_et_al/: meta.yaml  transform.py
data/CYP_P450_3A4_Inhibition_Veith_et_al/: meta.yaml  transform.py
data/Carcinogens/: example_processing_and_templates.ipynb  meta.yaml  transform.py
data/ChEMBL_V29/: meta.yaml  transform.py
data/Clearance_AstraZeneca/: meta.yaml  transform.py
data/ClinTox/: data_clean.csv  example_processing_and_templates.ipynb  meta.yaml  transform.py
data/Drug_Induced_Liver_Injury/: example_processing_and_templates.ipynb  meta.yaml  transform.py
data/Drug_target_interaction/: example_processing_and_templates.ipynb  meta.yaml  transform.py
data/HIV/: meta.yaml  transform.py
data/Half_Life_Obach/: meta.yaml  transform.py
data/Human_Intestinal_Absorption/: meta.yaml  transform.py
data/HydrationFreeEnergy_FreeSolv/: meta.yaml  transform.py
data/IEDB_Jespersen_et_al/: meta.yaml  transform.py
data/Lipophilicity_AstraZeneca/: meta.yaml  transform.py
data/PDB_Jespersen_et_al/: meta.yaml  transform.py
data/P_glycoprotein_Inhibition_Broccatelli_et_al/: meta.yaml  transform.py
data/Plasma_Protein_Binding_Rate_AstraZeneca/: meta.yaml  transform.py
data/SARSCoV2_3CLPro_Diamond/: meta.yaml  transform.py
data/SARSCoV2_Vitro_Touret/: meta.yaml  transform.py
data/SAbDab_Chen/: meta.yaml  transform.py
data/Skin_Reaction/: example_processing_and_templates.ipynb  meta.yaml  transform.py
data/Solubility_AqSolDB/: meta.yaml  transform.py
data/TAP/: meta.yaml  transform.py
data/USPTO_500k/: meta.yaml  transform.py
data/Volume_of_Distribution_at_steady_state_Lombardo_et_al/: meta.yaml  transform.py
data/ames_mutagenicity/: meta.yaml  transform.py
data/bindingdb_kd/: meta.yaml  transform.py
data/bioavailability_ma_et_al/: meta.yaml  transform.py
data/blood_brain_barrier_martins_et_al/: meta.yaml  transform.py
data/buchwald_hartwig/: Dreher_and_Doyle_input_data.csv  data_clean.csv  example_processing_and_templates.ipynb  meta.yaml  transform.py
data/caco2_wang/: example_processing_and_templates.ipynb  meta.yaml  transform.py
data/carcinogens/: meta.yaml  transform.py
data/cav3_t-type_calcium_channels_butkiewicz/: meta.yaml  transform.py
data/chebi_20/: meta.yaml  test_meta.yaml  train_meta.yaml  transform.py  validation_meta.yaml
data/chembl_29/: meta.yaml  transform.py
data/chembl_v29/: transform.py
dev/: model.py  validate.py
docs/: CONTRIBUTING.md  EXPERIMENT.md  SUBMODULES.md  index.md
experiments/: CLUSTER.md  EXPERIMENTS.md  README.md
notebooks/: example.ipynb  explore_inference.ipynb  explore_training_loss.ipynb  huggingface_tokenizer.ipynb  libretext_crawler.ipynb  lines_to_remove.jsonl  top_sentances.ods
scripts/: CLUSTER.md  run_tune.py
tests/: test_ner.py  test_reprs.py
text_sampling/: preprocess_kg.py  text_sampling.py
(+809 files in other folders)
