[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "chemnlp"
description = "Open source chemistry dataset & LLM"
readme = "README.md"
requires-python = "==3.8.*"  # required for gpt-neox
dependencies = [
        "datasets>=2.8.0",
        "numpy>=1.21.2",
        "openpyxl>=3.0.9",
        "pandas>=1.3.3",
        "peft",
        "pydantic",
        "pytdc>=0.3.9",
        "transformers",
        "wandb==0.10.28"
]

dynamic = ["version"]

[project.optional-dependencies]
dev = [
        "black[jupyter]>=22.1.0",
        "fire",
        "flake8>=3.8.3",
        "isort>=5.0.0",
        "pre-commit",
        "pydantic_yaml",
        "pytest",
        "pubchempy"
]

dataset_creation = [
        "PyTDC",
        "rdkit-pypi",
        "ruamel.yaml",
        "modin[all]",
        "selfies",
        "deepsmiles",
        "pubchempy",
        "canonicalize_psmiles@git+https://github.com/Ramprasad-Group/canonicalize_psmiles.git",
        #"tucan@git+https://github.com/TUCAN-nest/TUCAN.git"  # the current version has bugs due to the type checking, maybe this is due to our python version?
]

training = [
        "deepspeed>=0.8.2", # https://github.com/microsoft/DeepSpeed/pull/2863
        "nvidia-ml-py3",
        "protobuf<3.20",
        "s3fs",
        "boto3<=1.26.90", # https://github.com/boto/boto3/issues/3648
]

tokenisation = [
        "zstandard",
        "apache_beam",
        "mwparserfromhell",
        "jsonlines"
]

[tool.setuptools_scm]
version_scheme = "post-release"
