[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "chemnlp"
description = "Open source chemistry dataset & LLM"
readme = "README.md"
requires-python = "==3.9.*"
dependencies = ["pandas", "pydantic", "pydantic_yaml<=0.11.2", "fire", "loguru"]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["pre-commit", "pytest"]
dataset_creation = [
    "PyTDC",
    "rdkit",
    "ruamel.yaml",
    "selfies",
    "deepsmiles",
    "pubchempy",
    "bioc",
    "pylatexenc",
    "canonicalize_psmiles@git+https://github.com/Ramprasad-Group/canonicalize_psmiles.git",
    "rxn-chem-utils",
    "backoff",
    "givemeconformer",
    "chembl_webresource_client",
    "dask",
    "pandarallel",
]

[project.scripts]
chemnlp-generate-meta = "chemnlp.data.meta_yaml_generator:cli"
chemnlp-augment-meta = "chemnlp.data.meta_yaml_augmenter:cli"
chemnlp-sample = "chemnlp.data.sampler_cli:cli"
chemnlp-add-random-split-column = "chemnlp.data.utils:add_random_split_column_cli"

[tool.setuptools_scm]
version_scheme = "post-release"
